--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   },
   "scripts": {
     "start": "react scripts start",
-    "build": "CI='' npm run build",
+    "build": "CI= false && react-scripts build",
     "test": "react scripts test",
     "eject" : "react-scripts eject" 
  },
