--- a/package.json
+++ b/package.json
@@ -18,10 +18,9 @@
     "web-vitals": "^0.2.4"
   },
   "scripts": {
-    "start": "react scripts start",
-    "build": "CI= false && react-scripts build",
-    "test": "react scripts test",
-    "eject" : "react-scripts eject" 
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "./node_modules/.bin/netlify-lambda serve src",
+    "build": "react-scripts build"
  },
   "eslintConfig": {
     "extends": [
