--- a/package.json
+++ b/package.json
@@ -18,9 +18,10 @@
     "web-vitals": "^0.2.4"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "./node_modules/.bin/netlify-lambda serve src",
-    "build": "react-scripts build"
+    "start": "react scripts start",
+    "build": "CI='' npm run build",
+    "test": "react scripts test",
+    "eject" : "react-scripts eject" 
  },
   "eslintConfig": {
     "extends": [
