--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.5.0",
     "bootstrap": "^5.1.3",
-    "react": "^17.0.1",
+    "netlify-lambda": "^2.0.15",
+    "react": "^18.1.0",
     "react-bootstrap": "^2.0.0",
     "react-dom": "^17.0.1",
     "react-router": "^5.2.1",
-    "react-router-dom": "^5.3.0",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "4.0.1",
     "web-vitals": "^0.2.4"
   },
@@ -24,7 +25,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
- },
+  },
   "eslintConfig": {
     "extends": [
       "react-app",
