--- a/package.json
+++ b/package.json
@@ -1,5 +1,4 @@
 {
-  "homepage": "http://ziadAshraf7.github.io/First-React-project",
   "name": "dojo-blog",
   "version": "0.1.0",
   "private": true,
@@ -9,10 +8,11 @@
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.5.0",
+    "bootstrap": "^5.1.3",
     "netlify-lambda": "^2.0.15",
     "react": "^18.1.0",
     "react-bootstrap": "^2.0.0",
-    "react-dom": "^18.0.1",
+    "react-dom": "^18.2.0",
     "react-router": "^5.2.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "4.0.1",
@@ -20,9 +20,10 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
-    "build": "react-scripts build",
+    "start:lambda": "netlify-lambda serve src/lambda",
+    "build": "run-p build:**",
+    "build:app": "react-scripts build",
+    "build:lambda": "netlify-lambda build src/lambda",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
