--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.5.0",
+    "bootstrap": "^5.1.3",
     "netlify-lambda": "^2.0.15",
     "react": "^18.2.0",
     "react-bootstrap": "^2.0.0",
