--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://ziadAshraf7.github.io/First-React-project/",
   "name": "dojo-blog",
   "version": "0.1.0",
   "private": true,
