--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -43,7 +45,12 @@
       "last 1 safari version"
     ]
   },
+  
+  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
+  "main": "index.js",
   "devDependencies": {
     "gh-pages": "^4.0.0"
-  }
+  },
+  "author": "",
+  "license": "ISC"
 }
