--- a/package.json
+++ b/package.json
@@ -1,5 +1,4 @@
 {
-  "homepage": "http://zen-hoover-355ae9.netlify.app",
   "name": "dojo-blog",
   "version": "0.1.0",
   "private": true,
@@ -21,9 +20,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
-    "build": "react-scripts build",
+    "build": "CI = false && react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
