--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": ".",
+  "homepage": "http://zen-hoover-355ae9.netlify.app",
   "name": "dojo-blog",
   "version": "0.1.0",
   "private": true,
