--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://zen-hoover-355ae9.netlify.app",
+  "homepage": "http://app.netlify.com/sites/zen-hoover-355ae9/deploys/62cd76f97ae8d60009c25b94",
   "name": "dojo-blog",
   "version": "0.1.0",
   "private": true,
