--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": ".",
   "name": "dojo-blog",
   "version": "0.1.0",
   "private": true,
@@ -13,14 +14,13 @@
     "bootstrap": "^5.1.3",
     "react-bootstrap": "^2.0.0",
     "react-dom": "^18.2.0",
-    "react-router": "^5.2.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "4.0.1",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "CI = '' npm run build",
+    "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
