--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": ".",
+  "homepage": "http://62cd799a6264050009a1ea65--zen-hoover-355ae9.netlify.app/",
   "name": "dojo-blog",
   "version": "0.1.0",
   "private": true,
