--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://62cd799a6264050009a1ea65--zen-hoover-355ae9.netlify.app/",
+  "homepage": ".",
   "name": "dojo-blog",
   "version": "0.1.0",
   "private": true,
@@ -9,12 +9,11 @@
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.5.0",
-    "netlify-lambda": "^2.0.15",
-    "react": "^18.1.0",
+    "react": "^18.2.0",
     "bootstrap": "^5.1.3",
     "react-bootstrap": "^2.0.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.3.0",
+    "react-dom": "^18.1.0",
+    "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.1",
     "web-vitals": "^0.2.4"
   },
