--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.5.0",
-    "react": "^18.2.0",
+    "netlify-lambda": "^2.0.15",
+    "react": "^18.1.0",
     "bootstrap": "^5.1.3",
     "react-bootstrap": "^2.0.0",
-    "react-dom": "^18.1.0",
-    "react-router-dom": "^6.0.2",
+    "react-dom": "^18.2.0",
+    "react-router": "^5.2.1",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "4.0.1",
     "web-vitals": "^0.2.4"
   },
@@ -39,13 +41,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  
-  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
-  "main": "index.js",
-  "devDependencies": {
-    "gh-pages": "^4.0.0"
-  },
-  "author": "",
-  "license": "ISC"
+  }
 }
