--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "http://ziadAshraf7.github.io/First-React-project",
   "name": "dojo-blog",
   "version": "0.1.0",
   "private": true,
@@ -15,7 +16,7 @@
     "react-dom": "^18.2.0",
     "react-router": "^5.2.1",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "4.0.1",
+    "react-scripts": "5.0.0",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
