--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://ziadAshraf7.github.io/First-React-project",
+  "homepage": ".",
   "name": "dojo-blog",
   "version": "0.1.0",
   "private": true,
