--- a/package.json
+++ b/package.json
@@ -1,23 +1,23 @@
 {
-  "homepage": "http://ziadAshraf7.github.io/First-React-project",
-  "name": "dojo-blog",
+  "name": "my-app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@fortawesome/fontawesome-free": "^5.15.4",
-    "@fortawesome/fontawesome-svg-core": "^1.2.36",
-    "@testing-library/jest-dom": "^5.11.6",
-    "@testing-library/react": "^11.2.2",
-    "@testing-library/user-event": "^12.5.0",
-    "netlify-lambda": "^2.0.15",
-    "react": "^18.1.0",
-    "bootstrap": "^5.1.3",
-    "react-bootstrap": "^2.0.0",
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@material-ui/core": "^4.12.4",
+    "@mui/icons-material": "^5.10.14",
+    "@mui/lab": "^5.0.0-alpha.108",
+    "@mui/material": "^5.10.14",
+    "@mui/styles": "^5.10.14",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.1.3",
+    "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router": "^5.2.1",
-    "react-router-dom": "^6.3.0",
-    "react-scripts": "5.0.0" ,
-    "web-vitals": "^0.2.4"
+    "react-scripts": "5.0.1",
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -44,8 +44,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "gh-pages": "^4.0.0"
   }
 }
